# MixedPythonCpp

./: .env  .gitignore  CMakeLists.txt  Makefile  README.md  add.cpp  requirements.txt  test_add.py  test_mylib.py
.devcontainer/: Dockerfile.python  Dockerfile.ubuntu  devcontainer.json
src/: mylib.cpp  mylib.h
test/: test_mylib.py
